--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "inquirer": "^8.0.0",
+    "lodash": "^4.17.21",
     "typescript": "^5.3.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.7",
     "@types/uuid": "^9.0.7",
+    "@types/lodash": "^4.14.202",
     "ts-node": "^10.9.2"
   }
 }
